refinement crud users and login

--- a/tmpl/layouts/client.html
+++ b/tmpl/layouts/client.html
@@ -11,8 +11,9 @@
         <link rel="shortcut icon" href="{{ .FavIcon }}">
 
         <link rel="stylesheet" href="/assets/styles/fgo.css">
-        <!--Fontawesome CDN-->
+        <!--Fontawesome -->
         <link rel="stylesheet" href="/assets/styles/fa5.min.css">
+        <!-- Bulma UI Framework -->
         <link rel="stylesheet" href="/assets/styles/bulma/bulma.min.css">
         <!-- CSS only -->
         <link href="/assets/lib/main/style.css" rel="stylesheet">
@@ -29,7 +30,7 @@
     <footer>
         <div class="bg-dark">
             <div class="col-12 text-center text-white p-3">
-                {{/*                <div class="fs-12 copyright">© {{ .CopyrightYear }} {{ .LogoAlt }} • All rights reserved</div>*/}}
+                <div class="fs-12 copyright">© {{ .CopyrightYear }} • All rights reserved</div>
             </div>
         </div>
     </footer>
