--- a/assets/lib/main/style.css
+++ b/assets/lib/main/style.css
@@ -42,3 +42,20 @@
     from {bottom: 30px; opacity: 1;}
     to {bottom: 0; opacity: 0;}
 }
+
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    text-align: right;
+    width: 100%;
+    font-size: 0.7em;
+}
+
+.sidebar {
+    width: 200px;
+    padding: 20px 20px 30px 20px;
+    box-shadow: 2px 2px 0 0 #f5f5f5;
+    height: 100%;
+    background-color: #d4dbe9;
+}
