--- a/tmpl/layouts/admin.html
+++ b/tmpl/layouts/admin.html
@@ -1,6 +1,6 @@
 {{define "layout_admin"}}
     <!DOCTYPE html>
-    <html lang="en">
+    <html lang="en" class="has-navbar-fixed-top">
     <head>
         <meta charset="UTF-8">
         <!-- Primary Meta Tags -->
@@ -10,43 +10,82 @@
         <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no,user-scalable=no">
         <link rel="shortcut icon" href="{{ .FavIcon }}">
 
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&amp;display=swap" rel="stylesheet">
-
         <!-- CSS only -->
-        <link href="/assets/styles/main.min.css" rel="stylesheet">
-        <!--Fontawesome CDN-->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+        <link rel="stylesheet" href="/assets/styles/fgo.css">
+        <link rel="stylesheet" href="/assets/styles/fa5.min.css">
+        <link href="/assets/styles/bulma/bulma.min.css" rel="stylesheet">
+        <link href="/assets/lib/main/style.css" rel="stylesheet">
+
         {{ block "styles" . }} {{ end }}
         {{ block "scripts" . }} {{ end }}
     </head>
     <body>
-    <section id="tools" class="hide">
-        <div class="modal-dialog">
-
-        </div>
-    </section>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
-            <div class="container">
-                <a class="navbar-brand navbar-brand flex-fill text-center text-lg-left pr-3 pr-sm-0" href="/">
-                    <img src="{{ .LogoUrl }}" alt="{{ .LogoAlt }}"/>
+        <nav class="navbar is-white has-shadow is-fixed-top" role="navigation" aria-label="navigation">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="/adm/dashboard">
+                    <img src="/assets/images/onelabs-logo@2x.png" alt="Onelabs" style="max-height: 2.5rem;">
                 </a>
-                {{ if .LoggedIn }}
-                    <a class="btn btn-primary-light" href="/logout">Logout</a>
+                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                </a>
+            </div>
+            <div class="navbar-end">
+                {{ block "sign-in" . }}
+                <div class="navbar-item has-dropdown is-hoverable">
+                    {{ if .user }}
+                    <a class="navbar-link"><i class="fas fa-user-circle"></i>&nbsp;<span class="is-text">
+                        {{ if .user.DisplayName }}
+                            {{ .user.DisplayName }}
+                        {{ else }}
+                            {{ .user.Username }}
+                        {{ end }}
+                    </span></a>
+                    <div class="navbar-dropdown is-right">
+                        <a class="navbar-item btn btn-primary-light" href="/adm/logout"><i class="fas fa-sign-out-alt"></i>&nbsp;<span class="is-text">Logout</span></a>
+                    </div>
+                    {{ end }}
+                </div>
                 {{ end }}
             </div>
         </nav>
     </header>
-    <section class="pt-6" id="content" style="margin-bottom: 100px">
+    {{ block "menu" . }}
+    <aside class="menu sidebar">
+        <p class="menu-label">General</p>
+        <ul class="menu-list">
+            <li><a href="/adm/dashboard" class="menu-item"><i class="fas fa-home"></i> <span class="is-text">Home</span></a></li>
+        </ul>
+        <p class="menu-label">Administration</p>
+        <ul class="menu-list">
+            <li><a href="/adm/distributions" class="menu-item"><i class="fas fa-share-alt"></i> <span class="is-text">Distributions</span></a></li>
+            <li><a href="/adm/links" class="menu-item"><i class="fas fa-link"></i> <span class="is-text">Links</span></a></li>
+            <li><a href="/adm/objects" class="menu-item"><i class="fas fa-object-group"></i> <span class="is-text">Objects</span></a></li>
+            <li>
+                <a class="menu-item"><i class="fas fa-user"></i> <span class="is-text">Users</span></a>
+                <ul>
+                    <li><a href="/adm/users"><i class="fas fa-users"></i> <span class="is-text">Users</span></a></li>
+                    <li><a href="/adm/roles"><i class="fas fa-user-tag"></i> <span class="is-text">Role</span></a></li>
+                    <li><a href="/adm/groups"><i class="fas fa-user-tie"></i> <span class="is-text">Group</span></a></li>
+                    <li><a href="/adm/access"><i class="fas fa-user-shield"></i> <span class="is-text">Access</span></a></li>
+                </ul>
+            </li>
+        </ul>
+    </aside>
+    {{ end }}
+    <section class="pt-6" id="content" style="margin-bottom: 2em;">
         {{template "content" .}}
     </section>
     <footer>
         <div class="bg-dark">
-            <div class="col-12 text-center text-white p-3">
-                <div class="fs-12 copyright">© {{ .CopyrightYear }} {{ .LogoAlt }} • All rights reserved</div>
+            <div class="col-12 text-white p-3">
+                <div class="fs-12 copyright">© {{ .CopyrightYear }} • All rights reserved</div>
             </div>
         </div>
     </footer>
+    <script src="/assets/lib/main/script.js"></script>
     {{ block "body_scripts" . }} {{ end }}
     </body>
     </html>
