--- a/tmpl/views/member-review.html
+++ b/tmpl/views/member-review.html
@@ -1,4 +1,4 @@
-{{ template "layout_client" . }}
+{{ template "layout_member" . }}
 {{ define "title" }} {{ .PageTitle }} {{ end }}
 {{ define "styles" }}
     <link href="/assets/lib/360/style.css" rel="stylesheet">
