--- a/tmpl/views/member-login.html
+++ b/tmpl/views/member-login.html
@@ -1,58 +1,76 @@
 {{ template "layout_member" . }}
 {{ define "title" }} {{ .PageTitle }} {{ end }}
 {{ define "styles" }}
-<link href="/assets/lib/login/style.css" rel="stylesheet">
+    <link href="/assets/lib/login/style.css" rel="stylesheet">
+    <style>
+        html, body {
+            background: #b8b5b8 none;
+        }
+        .panel.is-primary .panel-heading, .button.is-primary {
+            background-color: #1f68b8;
+        }
+    </style>
+{{ end }}
+{{ define "scripts" }}
+    <script type="text/javascript">
+        window.redirectUrl = '{{ .RedirectUrl }}';
+    </script>
 {{ end }}
 {{ define "body_scripts" }}
-<script src="/assets/lib/login/script.js" type="text/javascript"></script>
+    <script src="/assets/lib/login/script.js" type="text/javascript"></script>
 {{ end }}
 {{ define "sign-in" }}
-<div class="navbar-item is-hoverable">
-    <a class="navbar-link is-arrowless"><i class="fas fa-user-secret"></i>&nbsp;<span class="is-text">Please Sign-In!</span></a>
-</div>
+    <div class="navbar-item is-hoverable">
+        <a class="navbar-link is-arrowless"><i class="fas fa-user-secret"></i>&nbsp;<span class="is-text">Please Sign-In!</span></a>
+    </div>
 {{ end }}
 {{ define "menu" }} &nbsp; {{ end }}
 {{ define "content" }}
-<div class="columns" style="min-height: 550px;">
-    <div class="column"></div>
-    <div class="column is-narrow">
-        <div class="panel is-primary">
-            <div class="panel-heading">
-                <h3>Sign In</h3>
-            </div>
-            <div class="panel-block">
-                <form id="loginForm" name="loginForm" method="post" style="width: 100%">
-                    <div class="field mt-2">
-                        <label class="label">Username</label>
-                        <div class="control is-expanded has-icons-left">
-                            <input name="username" class="input form-input" type="text" placeholder="Input your username here...">
-                            <span class="icon is-small is-left"><i class="fas fa-user"></i></span>
+    <div class="columns" style="min-height: 550px;">
+        <div class="column"></div>
+        <div class="column is-narrow">
+            <div class="panel is-primary">
+                <div class="panel-heading">
+                    <h3>Sign In</h3>
+                </div>
+                <div class="panel-block">
+                    <form id="loginForm" name="loginForm" method="post" style="width: 100%">
+                        <div class="field mt-2">
+                            <label class="label">Username</label>
+                            <div class="control is-expanded has-icons-left">
+                                <input name="username" class="input form-input" type="text"
+                                       placeholder="Input your username here...">
+                                <span class="icon is-small is-left"><i class="fas fa-user"></i></span>
+                            </div>
                         </div>
-                    </div>
-                    <span class="err-username tag is-danger is-hidden"></span>
-                    <div class="field mt-2">
-                        <label class="label">Password</label>
-                        <div class="control is-expanded has-icons-left">
-                            <input name="password" class="input form-input" type="password" placeholder="Input your password here...">
-                            <span class="icon is-small is-left"><i class="fas fa-lock"></i></span>
+                        <span class="err-username tag is-danger is-hidden"></span>
+                        <div class="field mt-2">
+                            <label class="label">Password</label>
+                            <div class="control is-expanded has-icons-left">
+                                <input name="password" class="input form-input" type="password"
+                                       placeholder="Input your password here...">
+                                <span class="icon is-small is-left"><i class="fas fa-lock"></i></span>
+                            </div>
                         </div>
-                    </div>
-                    <span class="err-password tag is-danger is-hidden"></span>
-                    <div class="field remember">
-                        <label>
-                            <input name="remember" class="form-input" type="checkbox"> <span style="position: absolute">Remember Me</span>
-                        </label>
-                    </div>
-                    <div class="field is-grouped is-grouped-right">
-                        <input name="csrf" class="form-input" type="hidden" value="{{ .Csrf }}">
-                        <div class="control">
-                            <button name="login_button" id="submitLogin" type="submit" class="button is-primary">Login</button>
+                        <span class="err-password tag is-danger is-hidden"></span>
+                        <div class="field remember">
+                            <label>
+                                <input name="remember" class="form-input" type="checkbox"> <span
+                                        style="position: absolute">Remember Me</span>
+                            </label>
                         </div>
-                    </div>
-                </form>
+                        <div class="field is-grouped is-grouped-right">
+                            <input name="csrf" class="form-input" type="hidden" value="{{ .Csrf }}">
+                            <div class="control">
+                                <button name="login_button" id="submitLogin" type="submit" class="button is-primary">
+                                    Login
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
+        <div class="column"></div>
     </div>
-    <div class="column"></div>
-</div>
 {{ end }}
