--- a/tmpl/views/member-review-list.html
+++ b/tmpl/views/member-review-list.html
@@ -1,7 +1,7 @@
 {{ template "layout_member" . }}
 {{ define "title" }} {{ .PageTitle }} {{ end }}
 {{ define "styles" }}
-<link href="/assets/lib/review/style.css" rel="stylesheet">
+<link href="/assets/lib/review/list.css" rel="stylesheet">
 <style>
     html, body {
         background: #b8b5b8 none;
@@ -13,7 +13,7 @@
 </style>
 {{ end }}
 {{ define "body_scripts" }}
-<script type="module" src="/assets/lib/review/script.js"></script>
+<script type="module" src="/assets/lib/review/list.js"></script>
 {{ end }}
 {{ define "header"}}
 <nav class="navbar is-white" role="navigation">
