--- a/tmpl/layouts/member.html
+++ b/tmpl/layouts/member.html
@@ -47,7 +47,7 @@
                         {{ end }}
                     </span></a>
                     <div class="navbar-dropdown is-right">
-                        <a class="navbar-item btn btn-primary-light" href="/mbr/logout"><i class="fas fa-sign-out-alt"></i>&nbsp;<span class="is-text">Logout</span></a>
+                        <a class="navbar-item btn btn-primary-light" href="/logout?ref=/mbr/login"><i class="fas fa-sign-out-alt"></i>&nbsp;<span class="is-text">Logout</span></a>
                     </div>
                     {{ end }}
                 </div>
