--- a/tmpl/layouts/admin.html
+++ b/tmpl/layouts/admin.html
@@ -44,7 +44,7 @@
                         {{ end }}
                     </span></a>
                     <div class="navbar-dropdown is-right">
-                        <a class="navbar-item btn btn-primary-light" href="/adm/logout"><i class="fas fa-sign-out-alt"></i>&nbsp;<span class="is-text">Logout</span></a>
+                        <a class="navbar-item btn btn-primary-light" href="/logout?ref=/adm/login"><i class="fas fa-sign-out-alt"></i>&nbsp;<span class="is-text">Logout</span></a>
                     </div>
                     {{ end }}
                 </div>
