refinement review sorting, loadmore etc

--- a/tmpl/views/member-review-list.html
+++ b/tmpl/views/member-review-list.html
@@ -40,7 +40,7 @@
     <div class="column is-7">
         <div class="panel is-primary">
             <div class="panel-heading">
-                <h3>Requested Review List</h3>
+                <h3>Requested Reviews</h3>
             </div>
             <div class="panel-block p-5" style="background: white">
                 <table class="table items is-striped is-hoverable is-fullwidth">
@@ -54,6 +54,13 @@
                         </tr>
                     </thead>
                     <tbody></tbody>
+                    <tfoot class="load-more">
+                    <tr>
+                        <td colspan="5">
+                            <button class="button is-info is-light is-medium is-fullwidth">Load more...</button>
+                        </td>
+                    </tr>
+                    </tfoot>
                 </table>
             </div>
         </div>
