bugfiix forgot password

--- a/tmpl/views/_forgot-password.html
+++ b/tmpl/views/_forgot-password.html
@@ -11,6 +11,7 @@
 {{ define "body_scripts" }}
 <script src="/assets/lib/forgot/script.js" type="text/javascript"></script>
 {{ end }}
+{{ define "sign-in" }} {{ end }}
 {{ define "content" }}
 <div class="columns" style="min-height: 550px;">
     <div class="column"></div>
