--- a/tmpl/views/_forgot-password.html
+++ b/tmpl/views/_forgot-password.html
@@ -11,7 +11,11 @@
 {{ define "body_scripts" }}
 <script src="/assets/lib/forgot/script.js" type="text/javascript"></script>
 {{ end }}
-{{ define "sign-in" }} {{ end }}
+{{ define "sign-in" }}
+<div class="navbar-item is-hoverable">
+    <a class="navbar-link is-arrowless" href="/"><i class="fas fa-user-secret"></i>&nbsp;<span class="is-text">Please Sign-In!</span></a>
+</div>
+{{ end }}
 {{ define "content" }}
 <div class="columns" style="min-height: 550px;">
     <div class="column"></div>
