--- a/tmpl/views/admin-dashboard.html
+++ b/tmpl/views/admin-dashboard.html
@@ -1,10 +1,10 @@
 {{ template "layout_admin" . }}
 {{ define "title" }} {{ .PageTitle }} {{ end }}
 {{ define "styles" }}
-<link href="/assets/lib/dashboard/style.css" rel="stylesheet">
+<link href="/assets/lib/dashboard/style.min.css" rel="stylesheet">
 {{ end }}
 {{ define "body_scripts" }}
-<script src="/assets/lib/dashboard/script.js" type="text/javascript"></script>
+<script src="/assets/lib/dashboard/script.min.js" type="text/javascript"></script>
 {{ end }}
 {{ define "content" }}
 
