--- a/tmpl/layouts/admin.html
+++ b/tmpl/layouts/admin.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="/assets/styles/fgo.css">
         <link rel="stylesheet" href="/assets/styles/fa5.min.css">
         <link href="/assets/styles/bulma/bulma.min.css" rel="stylesheet">
-        <link href="/assets/lib/main/style.css" rel="stylesheet">
+        <link href="/assets/lib/main/style.min.css" rel="stylesheet">
 
         {{ block "styles" . }} {{ end }}
         {{ block "scripts" . }} {{ end }}
@@ -85,7 +85,7 @@
             </div>
         </div>
     </footer>
-    <script src="/assets/lib/main/script.js"></script>
+    <script src="/assets/lib/main/script.min.js"></script>
     {{ block "body_scripts" . }} {{ end }}
     </body>
     </html>
