--- a/tmpl/layouts/client.html
+++ b/tmpl/layouts/client.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="/assets/styles/fgo.css">
         <link rel="stylesheet" href="/assets/styles/fa5.min.css">
         <link rel="stylesheet" href="/assets/styles/bulma/bulma.min.css">
-        <link href="/assets/lib/main/style.css" rel="stylesheet">
+        <link href="/assets/lib/main/style.min.css" rel="stylesheet">
 
         {{ block "styles" . }} {{ end }}
         <script type="text/javascript">
@@ -46,7 +46,7 @@
             </div>
         </div>
     </footer>
-    <script src="/assets/lib/main/script.js"></script>
+    <script src="/assets/lib/main/script.min.js"></script>
     {{ block "body_scripts" . }} {{ end }}
     </body>
     </html>
