--- a/tmpl/views/admin-login.html
+++ b/tmpl/views/admin-login.html
@@ -1,10 +1,10 @@
 {{ template "layout_admin" . }}
 {{ define "title" }} {{ .PageTitle }} {{ end }}
 {{ define "styles" }}
-    <link href="/assets/lib/login/style.css" rel="stylesheet">
+    <link href="/assets/lib/login/style.min.css" rel="stylesheet">
 {{ end }}
 {{ define "body_scripts" }}
-    <script src="/assets/lib/login/script.js" type="text/javascript"></script>
+    <script src="/assets/lib/login/script.min.js" type="text/javascript"></script>
 {{ end }}
 {{ define "sign-in" }}
 <div class="navbar-item is-hoverable">
